# milky

./: .gitignore  CHANGELOG.md  CITATION.cff  Cargo.toml  Justfile  README.md  cliff.toml  rustfmt.toml
milky_bitboard/: Cargo.toml
milky_bitboard/src/: error.rs  lib.rs  moves.rs  square.rs
milky_chess/: Cargo.toml
milky_chess/benches/: perft.rs  search.rs
milky_chess/src/: bitboard.rs  board.rs  evaluate.rs  lib.rs  magic.rs  milky.rs  moves.rs  random.rs  search.rs  time_manager.rs  transposition_table.rs  zobrist.rs
milky_cli/: Cargo.toml
milky_cli/src/: lib.rs  main.rs
milky_fen/: Cargo.toml
milky_fen/src/: lib.rs
milky_fen/src/snapshots/: milky_fen__tests__initial_position.snap  milky_fen__tests__position_b.snap  milky_fen__tests__position_c.snap
milky_protocols/: Cargo.toml
milky_protocols/src/: lib.rs
milky_protocols/src/uci/: command.rs  error.rs  mod.rs  parser.rs
milky_uci/: Cargo.toml
milky_uci/src/: command.rs  lib.rs  parser.rs
scripts/: .envrc  lichess_db_to_fen.py  openings.epd  pyproject.toml  test.sh
scripts/src/: tune_search_razoring.py
src/: main.rs
