[workspace]
resolver = "2"
members = [
    "milky_chess",
    "milky_fen",
    "milky_bitboard",
]

[package]
name = "milky_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
milky_chess.workspace = true
milky_fen.workspace = true
milky_bitboard.workspace = true

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
milky_chess = { path = "milky_chess" }
milky_fen = { path = "milky_fen" }
milky_bitboard = { path = "milky_bitboard" }

thiserror = { version = "2.0.12" }

[workspace.lints.rust]
rust_2018_idioms = "deny"
