[workspace]
resolver = "2"
members = [
    "milky_chess",
    "milky_fen",
    "milky_bitboard",
    "milky_uci",
    "milky_cli",
]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
milky_chess = { path = "milky_chess" }
milky_fen = { path = "milky_fen" }
milky_bitboard = { path = "milky_bitboard" }
milky_uci = { path = "milky_uci" }
milky_cli = { path = "milky_cli" }

thiserror = { version = "2.0.12" }

[workspace.lints.rust]
rust_2018_idioms = "deny"
